solo-projects-8402/artifacts/common-gw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: common-gw
  annotations:
    gateway.gloo.solo.io/gateway-parameters-name: "common-gw-params"
spec:
  gatewayClassName: gloo-gateway
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway: "true"
    - name: healthcheck
      port: 9080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
