solo-projects-8402/artifacts/httpbin-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httpbin-route
  labels:
    route: httpbin
spec:
  hostnames:
    - 'httpbin.example.com'
  parentRefs:
    - name: common-gw
      namespace: common-gw
      kind: Gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: httpbin-upstream
          kind: Upstream
          group: gloo.solo.io
          namespace: httpbin
